tests/negative/match_no_subject.xs
-- EXPECT_ERROR
match {
    [] => 1
}
